--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ActivitySplash"
-    android:background="#FFD941">
+    android:background="@color/backgroundColor">
 
     
     <ImageView
